# pipelining

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code.tex  parse.py  run.sh
cmake_modules/: FindGDAL.cmake
common/: common.cpp  common.h
stxxl/: CMakeLists.txt  compare.h  filler.h  map.h  point_to_raster.h  pointgenerator.h  progress.h  raster.h  transform.cpp
tpie/: CMakeLists.txt  factory_helpers.h  filler.h  map.h  point_to_raster.h  pointgenerator.h  raster.h  transform.cpp
tpie_imperative/: CMakeLists.txt  transform.cpp  transform_paper.cpp
